--- a/exo1/index.html
+++ b/exo1/index.html
@@ -26,6 +26,22 @@
 </head>
 
 <body>
+
+    <nav>
+        <div class="container">
+            <div class="logo">
+                <h2>MON LOGO</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">A Propos</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <section id="hero">
         <h1>Bienvenue sur mon portfolio</h1>
         <i class="fa-solid fa-arrow-down"></i>
