correction exo2 - mobile

--- a/exo2/index.html
+++ b/exo2/index.html
@@ -92,6 +92,13 @@
         </div>
     </section>
 
+    <section id="explore" class="container">
+        <h2 class="second-title">Sell to anyone</h2>
+        <p>Build a loyal following with simple posts, email newsletters, and automated workflows. Plus let your customers pay what they want or choose between one-time, recurring</p>
+        <a href="#" class="title-btn">Explore Features</a>
+
+    </section>
+
     <section id="list">
         <div class="container">
             <h2 class="second-title">Make your own road</h2>
