--- a/exo2/index.html
+++ b/exo2/index.html
@@ -32,28 +32,28 @@
     <nav class="container">
         <img src="images/logo.png" alt="#">
     </nav>
-
-    <section id="hero">
-        <div class="container">
-            <h1>Go from<br>
-                zero to $1</h1>
-            <p>With Gumroad, anyone can earn their first dollar online. Just start with what you know, see what sticks, and get paid. It’s that easy</p>
-            <div class="main-btn">
-                <a href="">Start Now</a>
+    <div class="flex-desktop">
+        <section id="hero">
+            <div class="container">
+                <h1>Go from<br>
+                    zero to $1</h1>
+                <p>With Gumroad, anyone can earn their first dollar online. Just start with what you know, see what sticks, and get paid. It’s that easy</p>
+                <div class="main-btn">
+                    <a href="">Start Now</a>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="yellow">
-        <div>
-            <div class="img-container">
-                <img src="images/img-yellow.png" alt="#">
-                <img src="images/brush.png" alt="#">
+        <section id="yellow">
+            <div>
+                <div class="img-container">
+                    <img src="images/img-yellow.png" alt="#">
+                    <img src="images/brush.png" alt="#">
+                </div>
             </div>
-        </div>
 
-    </section>
-
+        </section>
+    </div>
     <section id="presentation">
         <div class="anim-container">
             <p class="txt">See what sticks - &nbsp;</p>
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <section id="story">
+    <section id="story" class="flex-desktop">
         <div>
             <img src="images/story1.png" alt="">
             <span>Instead of selling a book...</span>
@@ -99,7 +99,10 @@
 
     </section>
 
-    <section id="list">
+    <section id="list" class="flex-desktop">
+        <div class="image-desktop">
+            <img src="images/sell.jpg" alt="#">
+        </div>
         <div class="container">
             <h2 class="second-title">Make your own road</h2>
             <p>Whether you need more balance, flexibility, or just a different gig, we make it easier to chart a new path. You don't have to be a tech expert or even understand how to start a business.</p>
