--- a/exo3/index.html
+++ b/exo3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Base du projet</title>
+    <title>Correction menu</title>
     <meta name="description" content="Description de la page">
 
     <!-- Favicon -->
