--- a/exo5/index.html
+++ b/exo5/index.html
@@ -57,6 +57,19 @@
             <img src="images/hero-img.jpg" alt="#">
         </div>
     </section>
+
+    <section id="hotel" class="container flex-container">
+        <div>
+            <img src="images/hotel.jpg" alt="#">
+        </div>
+        <div>
+            <h3>hotel</h3>
+            <h2>Découvrer un Hotel typique de la région</h2>
+            <p>Faites votre choix parmi nos chambres tout confort, simples ou doubles et effetuez votre réservation de chambre d'hôtel à Neau.
+            <br>Bénéficiez d’un cadre idyllique au milieu d’un paysage rempli d’histoire</p>
+            <a href="#" class="main-btn">Réserver</a>
+        </div>
+    </section>
     
 </body>
 
